[project]
name = "face-art-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dlib>=20.0.0",
    "httpx>=0.28.1",
    "matplotlib>=3.10.5",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.1",
    "scipy>=1.16.1",
]
